Añadido secciones iniciales

--- a/Documento.tex
+++ b/Documento.tex
@@ -109,10 +109,20 @@ Lothar Soto Palma} % Author
 	\listoffigures
 	\newpage
 
+	\section{Introducción}
+	foafmosafma
+	\section{Modelo de arquitectura referente de motores de búsqueda}
+		\subsection{Características del modelo}
+		\subsection{Elementos del modelo}
+		\subsection{Metodología}
+	\section{Modelo de arquitectura del motor de búsqueda de Google}
+		\subsection{Características}
+		\subsection{Metodología}
+
 	\begin{thebibliography}{9}
 
-		 \bibitem{Timeline}
-		 \url{https://en.wikipedia.org/wiki/Timeline_of_machine_learning}
+		 \bibitem{Multi-tier architecture for Web Search Engines}
+		 \url{http://www.cwr.cl/la-web/2003/stamped/15_risvik_k-updates.pdf}
 
 	\end{thebibliography}
 \end{document}
