--- a/Documento.tex
+++ b/Documento.tex
@@ -110,7 +110,7 @@ Lothar Soto Palma} % Author
 	\newpage
 
 	\section{Introducción}
-	foafmosafma
+	Actualmente los motores de búsqueda son necesarios en nuestras vidas, cuando un usuario tiene una necesidad de información se dirige a una fuente de conocimiento para intenter suplirla, debido al reciente crecimiento del número de webs, Internet se ha convertido en una fuente de conocimiento masiva, como consecuencia los motores de búsqueda web se han vuelto muy importantes y la necesidad de obtener una arquitectura para estos sistemas que óptimice la realización de búsquedas es ahora una necesidad. En este documento vamos a analizar cada uno de los elementos de la arquitectura de un motor de búsqueda.
 	\section{Modelo de arquitectura referente de motores de búsqueda}
 		\subsection{Características del modelo}
 		\subsection{Elementos del modelo}
