--- a/Documento.tex
+++ b/Documento.tex
@@ -112,13 +112,35 @@ Lothar Soto Palma} % Author
 	\section{Introducción}
 	Actualmente los motores de búsqueda son necesarios en nuestras vidas, cuando un usuario tiene una necesidad de información se dirige a una fuente de conocimiento para intenter suplirla, debido al reciente crecimiento del número de webs, Internet se ha convertido en una fuente de conocimiento masiva, como consecuencia los motores de búsqueda web se han vuelto muy importantes y la necesidad de obtener una arquitectura para estos sistemas que óptimice la realización de búsquedas es ahora una necesidad. En este documento vamos a analizar cada uno de los elementos de la arquitectura de un motor de búsqueda.
 	\section{Modelo de arquitectura referente de motores de búsqueda}
-		\subsection{Características del modelo}
-		\subsection{Elementos del modelo}
-		\subsection{Metodología}
+	Los motores de búsqueda que operan en internet tienen comunmente una arquitectura centralizada, los elementos que componen esta arquitectura son:
+		\begin{itemize}
+			\item \textbf{Crawler}: Un crawler o una araña es normalmente un módulo que se encarga de la agregación al sistema de los documentos que posteriormente serán indexados para su búsqueda. De forma obvia la obtención de documentos de Internet no es una cuestión sencilla de resolver debido a la naturaleza descentralizada de la web. El funcionamiento básico de un crawler o araña es:
+				\begin{verbatim}
+					- Partimos de un conjunto semilla de URLs iniciales
+					- Establecemos una cola con prioridad en la que se irán incluyen las URLs anteriores
+					- Para cada URL de la cola:
+						- Descargamos el contenido de la web
+						- Estraemos los términos de indexación
+						- Incluimos los links de la web en la cola con prioridad
+						- Se vuelve a añadir a la cola la URL analizada
+				\end{verbatim}
+				Pero este proceso básico no es lo único a tener en cuenta de hecho las arañas suelen necesitar la ayuda de los servidores webs que analizan, con la aportación de datos que permiten entre otras cosas excluir webs del servidor de la araña o moderar el número de peticiones por minuto.
+
+				Existen muchas heurísticas y algoritmos para el crawling y la mayoria de ellos se basan en el análisis de hipertexto en los documentos.
+			\item \textbf{Indexer}: El indexador es el módulo que se encarga de a partir de los datos obtenidos con el proceso de crawling construir una estructura de acceso rápido (normalmente una tabla hash) llamada índice. Existen diversos modelos de indexación algunos de ellos son:
+
+				\begin{itemize}
+					\item Modelo binario: La interpretación principal de este modelo consiste en en la elaboración de un índice centrandose en la aparición o no de los términos en los documentos.
+					\item Modelo Vectorial: Este modelo a diferencia del alterior tiene en cuenta la frecuencia de aparición de un término en los documentos (tf), sin embargo a lo largo del tiempo han surgido modelos que tienen en cuenta la frecuencia inversa de aparición de un término en un documento (idf), y otro modelo que combina las dos ideas anteriorer llamado modelo tf-idf.
+					\item Modelo Probabilistico: El modelo probabilistico se centra en la probabilidad de aparición de un término en un documento.
+				\end{itemize}
+			\item \textbf{Searcher}: El buscador es aquel módulo que normalmente se ejecuta sobre un entorno web con un navegador, es el encargado de la realización de consultas sobre el índice creado por el indexador anterior.
+			\item \textbf{Dispatcher}: Por último el dispatcher es el encargado de la recepción de la consulta realizada desde el buscador y enviarla al servidor que realiza el cotejamiento con el índice para posteriormente obtener una lista ordenada por una puntuación denominada relevancia de URLs.
+		\end{itemize}
 	\section{Modelo de arquitectura del motor de búsqueda de Google}
 		Partiendo del modelo de arquitectura más general, vamos a ver algunos detalles particulares que incluye Google para optimizar los resultados de las búsquedas.
 		\begin{itemize}
-			\item  Las estructuras de datos usadas están optimizadas para manejar grandes colecciones de datos.
+			\item Las estructuras de datos usadas están optimizadas para manejar grandes colecciones de datos.
 			\item El crawling se realiza usando una gran cantidad de crawlers de forma distribuida.
 			\item Las páginas webs obtenidas mediante el crawling se almacenan comprimidas en un repositorio. La función de indexación descomprime los documentos y los parsea para crear el indice.
 			% BARRELS
@@ -128,11 +150,11 @@ Lothar Soto Palma} % Author
 		\subsection{Metodología}
 		Para mejorar la precisión de los resultados obtenidos la búsqueda en Google hace uso de una estructura de grafo asignando a cada enlace un peso que indica su "calidad".
 		De esta forma se calcula el llamado PageRank que proporciona una medida de la calidad e importancia de la página. Este valor se calcula sumando el número de enlaces a la pagina normalizados por un parámetro d que indica su importancia.
-		
+
 		El PageRank puede interpretarse como el comportamiento de un usuario que navega aleatoriamente. Dicho usuario navega entre las distintas webs a través de los enlaces de dichas páginas. Además se tiene en cuenta que el usuario puede en un momento dado abandonar la página actual.
 
 	\begin{thebibliography}{9}
-	
+
 		 \bibitem{Multi-tier architecture for Web Search Engines}
 		 \url{http://www.cwr.cl/la-web/2003/stamped/15_risvik_k-updates.pdf}
 		 \bibitem{The anatomy of a large-scale hypertextual Web search engineThe anatomy of a large-scale hypertextual Web search engine}
