--- a/Documento.tex
+++ b/Documento.tex
@@ -121,7 +121,14 @@ Lothar Soto Palma} % Author
 	En la web no hay un diseño general, aparte de incluir información verídica puede incluir información obsoleta y contradicciones, el contenido es generado dinámicamente en el tiempo por lo que es necesario volver a analizar cada web para incluirlas en los resultados de las búsquedas de forma rutinaria y por último tiene un gran crecimiento llegando a duplicarse cada pocos meses.
 
 	\section{Modelo de arquitectura referente de motores de búsqueda}
+	\subsection{Elementos del modelo}
 	Los motores de búsqueda que operan en internet tienen comunmente una arquitectura centralizada, los elementos que componen esta arquitectura son:
+	\begin{figure}[H]
+	    \centering
+    	\includegraphics[scale=0.75]{./img/modeloreferente.png}
+	    \caption{Modelo de referencia}
+	    \label{fig:my_label}
+	\end{figure}
 		\begin{itemize}
 			\item \textbf{Crawler}: Un crawler o una araña es normalmente un módulo que se encarga de la agregación al sistema de los documentos que posteriormente serán indexados para su búsqueda. De forma obvia la obtención de documentos de Internet no es una cuestión sencilla de resolver debido a la naturaleza descentralizada de la web. El funcionamiento básico de un crawler o araña es:
 				\begin{verbatim}
@@ -144,7 +151,7 @@ Lothar Soto Palma} % Author
 					\item Modelo Probabilistico: El modelo probabilistico se centra en la probabilidad de aparición de un término en un documento.
 				\end{itemize}
 			\item \textbf{Searcher}: El buscador es aquel módulo que normalmente se encarga de el procesamiento de las consultasque se realizan normalmente a través de un entorno web con un navegador, es el encargado de la realización de consultas sobre el índice creado por el indexador anterior.
-			\item \textbf{Dispatcher}: Por último el dispatcher es el encargado de la recepción de la consulta realizada desde el buscador y enviarla al servidor que realiza el cotejamiento con el índice para posteriormente obtener una lista ordenada por una puntuación denominada relevancia de URLs.
+			\item \textbf{Dispatcher}: Por último el dispatcher es el encargado de la recepción de la consulta realizada desde el buscador y enviarla al buscador que realizará el cotejamiento con el índice para posteriormente obtener una lista ordenada por una puntuación denominada relevancia de URLs que será mostrada a los usuarios a traves del cliente.
 		\end{itemize}
 
 		\subsection{Medida de relevancia}
@@ -181,5 +188,3 @@ Lothar Soto Palma} % Author
 
 	\end{thebibliography}
 \end{document}
-\grid
-\grid
